1. additional settings for ignoring resources

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,13 @@ target/
 
 #Ipython Notebook
 .ipynb_checkpoints
+
+# some eclipse IDE stuff
+.settings/
+.metadata/
+.project
+.pydevproject
+.classpath
+
+# Mac OS X service directories
+.DS_Store
