1. Добавил настройку количества попыток соединения с Stom-службой

--- a/etc/default-wamq.conf
+++ b/etc/default-wamq.conf
@@ -4,6 +4,7 @@ stompHost=localhost
 stompPort=61613
 stompLogin=admin
 stompPassword=admin
+stompReconnectionAttemps=50
 stompWhatsAppDestinationInboxPrefix=/topic/INBOX
 stompListeningDestination.1=/queue/OUTBOX
 stompListeningDestination.2=/topic/OUTBOX
