1. Обеспечена возможность множественного использования INBOX и OUTBOX destinations

--- a/etc/default-wamqd.conf
+++ b/etc/default-wamqd.conf
@@ -5,6 +5,7 @@ stompPort=61613
 stompLogin=admin
 stompPassword=admin
 stompReconnectionAttemps=50
-stompWhatsAppDestinationInboxPrefix=/topic/INBOX
-stompListeningDestination.1=/queue/OUTBOX
-stompListeningDestination.2=/topic/OUTBOX
+stompInboxDestinationPrefixes.1=/queue/wamqd/INBOX
+stompInboxDestinationPrefixes.2=/topic/wamqd/INBOX
+stompOutboxDestinations.1=/queue/wamqd/OUTBOX
+stompOutboxDestinations.2=/topic/wamqd/OUTBOX
