--- a/etc/default-wamqd.conf
+++ b/etc/default-wamqd.conf
@@ -5,7 +5,5 @@ stompPort=61613
 stompLogin=admin
 stompPassword=admin
 stompReconnectionAttemps=50
-stompInboxDestinationPrefixes.1=/queue/wamqd/INBOX
-stompInboxDestinationPrefixes.2=/topic/wamqd/INBOX
-stompOutboxDestinations.1=/queue/wamqd/OUTBOX
-stompOutboxDestinations.2=/topic/wamqd/OUTBOX
+stompInboxDestinations.1=/queue/wamqd.INBOX
+stompOutboxDestinations.1=/queue/wamqd.OUTBOX
