--- a/etc/wamqd.conf
+++ b/etc/wamqd.conf
@@ -5,5 +5,5 @@ stompPort=61613
 stompLogin=admin
 stompPassword=admin
 stompReconnectionAttemps=50
-stompInboxDestinations.1=/queue/wamqd.INBOX
-stompOutboxDestinations.1=/queue/wamqd.OUTBOX
+stompInboxDestinations.1=/queue/test.whatsapp.ws.INBOX
+stompOutboxDestinations.1=/queue/test.whatsapp.ws.OUTBOX
